--- a/gestor/autenticacao/templates/autenticacao/login.html
+++ b/gestor/autenticacao/templates/autenticacao/login.html
@@ -31,16 +31,15 @@
             border-color: #0a58ca;
         }
         .login-container img {
-            width: 80px; /* Ajuste o tamanho da imagem conforme necessário */
+            width: 80px;
             height: auto;
             display: block;
-            margin: 0 auto 20px auto; /* Centraliza a imagem e dá um espaço abaixo dela */
+            margin: 0 auto 20px auto;
         }
     </style>
 </head>
 <body>
     <div class="login-container">
-        <!-- Imagem do logo -->
         <img src="{% static 'images/icon.jpg' %}" alt="Logo">
 
         {% if messages %}
