--- a/gestor/templates/home.html
+++ b/gestor/templates/home.html
@@ -32,7 +32,7 @@
     </style>
 </head>
 <div class="image-container">
-    <img src="{% static 'images/icon.jpg' %}" alt="Imagem Central">
+    <img src="https://res.cloudinary.com/dl5awjzgt/image/upload/v1758920548/icon_mkq7lr.jpg" alt="Imagem Central">
 </div>
 
 {% endblock %}
