--- a/gestor/autenticacao/templates/autenticacao/login.html
+++ b/gestor/autenticacao/templates/autenticacao/login.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="{% static 'images/icon.jpg' %}" alt="Logo">
+        <img src="https://res.cloudinary.com/dl5awjzgt/image/upload/v1758920548/icon_mkq7lr.jpg" alt="Imagem Central">
 
         {% if messages %}
             <div class="alert alert-danger alert-dismissible fade show" role="alert">
