--- a/gestor/templates/base.html
+++ b/gestor/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<link rel="icon" type="image/png" href="https://res.cloudinary.com/dl5awjzgt/image/upload/v1758920548/icon_mkq7lr.jpg">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
