--- a/gestor/autenticacao/templates/autenticacao/login.html
+++ b/gestor/autenticacao/templates/autenticacao/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="pt">
+<link rel="icon" type="image/png" href="https://res.cloudinary.com/dl5awjzgt/image/upload/v1758921638/icon-removebg-preview_hwxbbz.png">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
